--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
             <div class="item text-center text-white   mt-5">
                 <h1>Smart Login System</h1>
                 <input class="form-control my-3 bg-transparent text-white " type="email" name="email" id="loginEmail" placeholder="Enter your email">
-                <input class="form-control my-3 bg-transparent text-white" type="password" name="" id="loginPass"    placeholder="Enter your password">
-                <button class="btn btn-outline-primary w-100 my-2">Login</button>
+                <input class=" form-control my-3 bg-transparent text-white" type="password" name="" id="loginPass"    placeholder="Enter your password">
+                <p class="text-success d-none" id="loginSuccess">Login wait ......</p>
+                <button id="Login" class="btn btn-outline-primary w-100 my-2">Login</button>
                 <h6>Don’t have an account? <a href="signUp.html">Sign Up</a></h6>    
-                <a href="home.html">heeeeeeeeeeeeee</a>
             </div>
         </div>
     </div>
