--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item mt-4 m-lg-1">
-                        <a class="nav-link active btn btn-outline-warning  text-white" aria-current="page" href="#">Logout</a>
+                        <a class="nav-link active btn btn-outline-warning  text-white" aria-current="page" href="index.html">Logout</a>
                         </li>
                     </ul>
                 </div>
@@ -32,7 +32,7 @@
         <div class="landing ">
             <div class="container d-flex justify-content-center">
                 <div class="item text-center mt-5">
-                    <h2>Welcome mahmoud</h2>
+                    <h2>Welcome <span id="welcomName">z</span></h2>
                 </div>
             </div>
         </div>
@@ -42,5 +42,6 @@
 
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/index.js"></script>
+    <script src="js/home.js"></script>
 </body>
 </html>
